--- a/res/drawable/btn_white_bg.xml
+++ b/res/drawable/btn_white_bg.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@android:color/white"/>
+    <stroke android:color="@color/text_color_4"
+        android:width="1px"/>
+    <corners android:radius="5dp"/>
+    <padding
+        android:left="6dp"
+        android:right="6dp"
+        android:top="6dp"
+        android:bottom="6dp"/>
 
-</selector>
+</shape>
