--- a/res/drawable/shape_sliding_normal.xml
+++ b/res/drawable/shape_sliding_normal.xml
@@ -3,5 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/text_color_white" />
-
+    <stroke android:color="@color/text_color_6" android:width="1dp"/>
 </shape>
