--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -11,6 +11,7 @@
         <item >城市</item>
         <item >新奇</item>
     </string-array>
+    <!--
     <string-array 
         name="home_title">
         <item >推荐</item>
@@ -24,18 +25,28 @@
         <item >城市</item>
         <item >新奇</item>
     </string-array>
-    <string-array name="home_icon_title">
-        <item >推荐-&#xe62d;</item>
-        <item >关注-&#xe62e;</item>
-        <item >体育-&#xe62f;</item>
-        <item >财经-&#xe630;</item>
-        <item >娱乐-&#xe631;</item>
-        <item >民生-&#xe632;</item>
-        <item >科技-&#xe633;</item>
-        <item >国际-&#xe634;</item>
-        <item >城市-&#xe635;</item>
-        <item >新奇-&#xe636;</item>
+    -->
+    //推荐、关注、娱乐、体育、财经、更多\收起、国际、科技、民生、城市。
+    //推荐--1,娱乐--4,体育--2,财经--3,国际--7,科技--6,民生--5,城市--8
+    <string-array name="home_icon_title_1">
+        <item >推荐-&#xe60c;</item>
+        <item >关注-&#xe614;</item>
+        <item >娱乐-&#xe60f;</item>
+        <item >体育-&#xe60d;</item>
+        <item >财经-&#xe60e;</item>
     </string-array>
+    <string-array name="home_icon_title_2">
+        <item >推荐-&#xe60c;</item>
+        <item >关注-&#xe614;</item>
+        <item >娱乐-&#xe60f;</item>
+        <item >体育-&#xe60d;</item>
+        <item >财经-&#xe60e;</item>
+        <item >国际-&#xe611;</item>
+        <item >科技-&#xe615;</item>
+        <item >民生-&#xe610;</item>
+        <item >城市-&#xe612;</item>
+    </string-array>
+
     <string-array name="ranking_icon_title">
         <item >综合-&#xe641;</item>
         <item >体育-&#xe62f;</item>
