--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -62,7 +62,7 @@
     	<color name="text_color_b">#B8B8B8</color>
     	<color name="text_color_c">#c9c9c9</color>
     	<color name="text_color_d">#d6d6d6</color>
-    	<color name="text_color_f3">#f3f3f3</color>
+    	<color name="text_color_f3">#fff3f3f3</color>
     	<color name="text_color_b0">#B0BDB4</color>
     	<color name="text_color_0">#000000</color>
     	<color name="text_color_3">#333333</color>
